--- a/HTML_Test/src/HTML2.html
+++ b/HTML_Test/src/HTML2.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <h1>Artikelverwaltung</h1>
-<h2>Übersicht über alle Artikel</h2>
+<h2>Übersicht über alle IPWA01_Lektion4.WebApplication1.src.java.shop.Artikel</h2>
 <ul>
-    <li>Artikel 1</li>
+    <li>IPWA01_Lektion4.WebApplication1.src.java.shop.Artikel 1</li>
         <ul>
             <li>Name: Filzpantoffeln "Rudolph"</li>
             <li>Beschreibung: Wunderschöne Filzpantoffeln mit roter Nase.</li>
         </ul>
-    <li>Artikel 2</li>
+    <li>IPWA01_Lektion4.WebApplication1.src.java.shop.Artikel 2</li>
         <ul>
             <li>Name: Handtasche "Cosmopolita"</li>
             <li>Beschreibung: Modische Filz-Handtasche
