--- a/HTML_Test/src/HTML3.html
+++ b/HTML_Test/src/HTML3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Artikelverwaltung</h1>
-    <h2>Übersicht über alle Artikel</h2>
+    <h2>Übersicht über alle IPWA01_Lektion4.WebApplication1.src.java.shop.Artikel</h2>
     <table border="1px">
         <tr>
             <th>Nr</th>
